@@ -3,5 +3,5 @@ Build pkgdetails
 
     $ cd /path/to/project
     $ ndk-build
-    $ mv libs/armeabi/pkgdetails assets/home/share/debootstrap/
+    $ mv libs/armeabi/pkgdetails assets/home/deploy/debootstrap/
 
