@@ -29,18 +29,18 @@
         android:title="@string/menu_properties">
     </item>
     <item
-        android:id="@+id/menu_status"
-        android:icon="@android:drawable/ic_menu_info_details"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/menu_status">
-    </item>
-    <item
         android:id="@+id/menu_clear"
         android:icon="@android:drawable/ic_menu_revert"
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/menu_clear">
+    </item>
+    <item
+        android:id="@+id/menu_status"
+        android:icon="@android:drawable/ic_menu_info_details"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/menu_status">
     </item>
     <item
         android:id="@+id/menu_settings"
